# IPS-Practica-C

./: .gitignore  README.md
Algorithms Tests/: CMakeLists.txt  binarySearch.c
Algorithms Tests/binarySearch/: CMakeLists.txt
Algorithms Tests/mergeSort/: mergeSort.c
Facultad/Kruskal/: Kruskal.c
Facultad/LegisladoresV2/: CMakeLists.txt  chicos_buenos.txt  chicos_malos.txt
Facultad/Lucas/legisladores/: main.c  (+1 more)
Facultad/euclides/: euclides.c
Facultad/getchar/: getcharDoWhile.c  getcharFor.c  minusMayus.c
Facultad/parcial1/: CMakeLists.txt
Facultad/practica0/: ejercicio2.c  ejercicio3.c  ejercicio4.c  ejercicio6.c
Facultad/practica1/: ejercicio3.c
Facultad/practica2/: ejercicio1.c  ejercicio10.c
Facultad/practicasV2/: CMakeLists.txt
Facultad/practicasV2/0/: ej10.c  ej11.c  ej2.c  ej3.c  ej5.c
Facultad/practicasV2/1/: ej3.c  ej6.c  ej7.c
Facultad/practicasV2/2/: ej2.c
Facultad/practicasV2/practica 0: inicial/: ej1.c  ej4.c  ej7.c  ej8.c  ej9.c
Facultad/practicasV2/practica 1: Arrays y punteros/: ej11.c  ej12.c  ej4.c  ej9.c
Facultad/practicasV2/practica 2: Estructuras, uniones y campos de bits/: ej2.c
Facultad/practicasV2/practica 2: Estructuras, uniones y campos de bits/encontradasEnLaWeb/: employeesData.c  peopleData.c
Facultad/practicasV2/practica0/ej14/: main.c
Facultad/practicasV2/practica2/encontradasEnLaWeb/employeesData/: employeesData.c
Facultad/trabajo_final_Taller2-V2/: CMakeLists.txt  main.c
calculator/: calculator.c
ejerciciosFer/: multiplos.c
getchar/: conteos.c  getcharWhile.c
smartcalendar/: smartCalendar.c
(+44 files in other folders)
