cmake_minimum_required(VERSION 3.21)
project(practica C)

set(CMAKE_C_STANDARD 11)

add_executable(practica
        0/ej1.c
        0/ej10.c
        0/ej11.c
        0/ej13.c
        0/ej2.c
        0/ej3.c
        0/ej4.c
        0/ej5.c
        0/ej7.c
        0/ej8.c
        0/ej9.c
        1/ej2.c)
